Refactored codebase and introduced new features and improvements for 2.0 release

--- a/RHServerManager.csproj
+++ b/RHServerManager.csproj
@@ -14,8 +14,8 @@
     <Authors>JuniorDark</Authors>
     <Company>JuniorDark</Company>
     <Product>RH Server Manager</Product>
-    <AssemblyVersion>1.0.1</AssemblyVersion>
-    <FileVersion>1.0.1</FileVersion>
+    <AssemblyVersion>2.0.0</AssemblyVersion>
+    <FileVersion>2.0.0</FileVersion>
     <AssemblyName>RH Server Manager</AssemblyName>
 	<IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
   </PropertyGroup>
@@ -37,6 +37,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Forms\ServiceForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
