--- a/Resources/Option/server_info.ini
+++ b/Resources/Option/server_info.ini
@@ -3,7 +3,7 @@
 //=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 
 [DBC SERVER]
-ip = YOUR_WAN_IP
+ip = PRIVATE_IP
 port = 51055
 max connection = 100
 
